Fleshed out more of the backend code
- Route-handlers have been created to serve the files in the views
folder- the CSS and images have been properly re-integrated so that the
webpage displays what was orignally shown with the static site
- Converted all HTML files of the view into ejs files
- Redid the href and sources attributes of all links and images in the
index.ejs and about.ejs files in order to properly match the new
directories and sub-directories

- Added in the ejs package (should have been installed in the previous
commit) for templating
- Added in a folder for partials (templates) for the headers and footers
of each page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -39,7 +39,7 @@ body h1, body h3, #logo{
 }
 
 #main-page-jumbo{
-  background-image: url(images/mallorcaPic.JPG);
+  background-image: url(/img/mallorcaPic.JPG);
   background-size: cover;
   height: 100vh;
 }
