--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
     <!-- Page footer -->
     <footer>
       <div class='container'>
-          <h2 class='footer-item'>TourMallorca</h2>
+          <p class='footer-item logo'>TourMallorca</p>
           <p class='footer-item'>Mock Webpage created with Bootstrap 3 by Christopher Liu</p>
       </div>
     </footer>
