--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
     <nav class='navbar navbar-default navbar-fixed-top'>
       <div class='container'>
         <div class='navbar-header'>
-          <a href='/' class='navbar-brand' id='logo'>
+          <a href='/' class='navbar-brand logo'>
             TourMallorca
           </a>
 
@@ -30,15 +30,10 @@
 
 
         <div class='collapse navbar-collapse' id='idToTarget'>
-          <ul class='nav navbar-nav'>
-            <li><a href='/about' class='active'>All About Mallorca</a></li>
-          </ul>
-
           <ul class='nav navbar-nav navbar-right'>
-            <li><a href='#'>Where to Go</a></li>
-            <li><a href='#'>What to Do</a></li>
-            <li><a href='#'>Cuisine</a></li>
-            <li><a href='#'>Packages</a></li>
+            <li><a href='/'>Home</a></li>
+            <li><a href='/about'>Sightseeing Tours</a></li>
+            <li><a href='#'>[Placeholder]</a></li>
           </ul>
         </div>
       </div>
