More changes to structures and elements of the index.ejs page
- Resized images to better match what is being displayed on the
index.ejs page so they will load faster
- Changed the Bootstrap row class for the images from sm to md so that
now the "tablet sizes" have a better look to the page (each image takes
up the entire page, as will their description text)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,33 +1,34 @@
 <% include ./partials/header.ejs %>
 
 
-    <div id="main-page-jumbo">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-              <div class="jumbotron-content">
-                <p class="jumbotron-title logo">¡Hola Mallorca!</p>
-                <p class="jumbotron-description">Discover the hidden gems of Mallorca</p>
-              </div>
-          </div>
+  <div id="main-page-jumbo">
+    <div class="container">
+        <div class="jumbotron-content">
+          <p class="jumbotron-title logo">¡Hola Mallorca!</p>
+          <p class="jumbotron-description">Discover the hidden gems of Mallorca</p>
         </div>
-      </div>
     </div>
+  </div>
 
 
-    <div class="container about-body">
+  <div class="container">
+
+
+
+    <div class='about-body'>
+      <!-- All of the following thumbnail images are 700x400 pixels -->
       <div class="row">
         <div class="col-lg-12">
           <h1 class="about-row-title">Historic Mallorca</h2>
         </div>
 
-        <div class="col-sm-7 col-xs-12">
+        <div class="col-md-7 col-xs-12">
           <div class="thumbnail">
             <img src="/img/castlePic.jpg" class="thumb-pic">
           </div>
         </div>
 
-        <div class="col-sm-5 col-xs-12">
+        <div class="col-md-5 col-xs-12">
           <p class="about-blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vulputate orci eu elit auctor, at maximus tellus dignissim. Aenean tempus rhoncus arcu, vitae porttitor arcu pulvinar et. Mauris at odio ac tortor venenatis ultricies. Donec elementum libero sapien, quis auctor ante tempus sit amet. Nullam in scelerisque diam. Curabitur in cursus tellus, id tincidunt risus. Aenean posuere, turpis id posuere condimentum, libero mauris elementum magna, a venenatis libero tellus vitae massa. Fusce bibendum iaculis leo, et aliquam massa. Sed gravida ac orci sit amet euismod. Praesent elementum lacus justo, id lobortis neque sagittis eget. Fusce vitae mollis justo. Duis fermentum quis mauris ut finibus. Donec rutrum rutrum augue, quis egestas libero. </p>
         </div>
       </div>
@@ -39,11 +40,11 @@
           <h1 class="about-row-title">Natural Resort</h2>
         </div>
 
-        <div class="col-sm-5 col-xs-12">
+        <div class="col-md-5 col-xs-12">
           <p class="about-blurb">Mauris odio ligula, finibus sed elementum id, cursus eu magna. Donec vitae tellus id quam varius tempus. Curabitur at sapien facilisis justo egestas consectetur. Aliquam enim dolor, porta eget cursus eu, venenatis sed elit. Phasellus ac leo tincidunt, condimentum erat ac, fermentum lacus. Integer sollicitudin, purus non porta vehicula, sapien odio mollis lectus, at aliquam nulla leo sodales massa. Donec cursus, ex vitae aliquet condimentum, ex est pulvinar purus, in luctus nunc lectus ut tellus. Vestibulum ut lacus eleifend, ullamcorper mi consectetur, dapibus leo. Proin sodales elementum ex, vel fermentum elit molestie eget. Cras sit amet gravida augue. Nam facilisis placerat fringilla. Cras eget mollis mauris. Sed sit amet elit tellus. Curabitur diam odio, aliquet vitae congue eu, porta ut erat. Donec lobortis justo vel hendrerit mattis. </p>
         </div>
 
-        <div class="col-sm-7 col-xs-12">
+        <div class="col-md-7 col-xs-12">
           <div class="thumbnail">
             <img src="/img/cuevasPic.JPG" class="thumb-pic">
           </div>
@@ -57,13 +58,13 @@
           <h1 class="about-row-title">Entertainment</h2>
         </div>
 
-        <div class="col-sm-7 col-xs-12">
+        <div class="col-md-7 col-xs-12">
           <div class="thumbnail">
             <img src="/img/sollerPic.JPG" class="thumb-pic">
           </div>
         </div>
 
-        <div class="col-sm-5 col-xs-12">
+        <div class="col-md-5 col-xs-12">
           <p class="about-blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vulputate orci eu elit auctor, at maximus tellus dignissim. Aenean tempus rhoncus arcu, vitae porttitor arcu pulvinar et. Mauris at odio ac tortor venenatis ultricies. Donec elementum libero sapien, quis auctor ante tempus sit amet. Nullam in scelerisque diam. Curabitur in cursus tellus, id tincidunt risus. Aenean posuere, turpis id posuere condimentum, libero mauris elementum magna, a venenatis libero tellus vitae massa. Fusce bibendum iaculis leo, et aliquam massa. Sed gravida ac orci sit amet euismod. Praesent elementum lacus justo, id lobortis neque sagittis eget. Fusce vitae mollis justo. Duis fermentum quis mauris ut finibus. Donec rutrum rutrum augue, quis egestas libero. </p>
         </div>
       </div>
@@ -76,7 +77,8 @@
           </p>
         </div>
       </div>
+    </div> <!-- End of 'about-body' -->
 
-    </div> <!-- End of container -->
+  </div> <!-- End of 'container' -->
 
 <% include ./partials/footer.ejs %>
