Added in a thumbnail section to the index.ejs page
- Added in three thumbnails that will appear in the frontpage
- The three thumbnails will pull from the vacations database
- It will only pull the first 3 results from the vacations database, as
only 3 thumbnails will appear on the front page
- The database will hold all of the "vacations packages", more than the
current 3, which will be used to populate the second page (which will be
a list of all the vacations)

- Since this is no longer the "real" index, considering renaming the
file to home.ejs
- Also, code to seed the database is left in the app.js file as this is
still in development. This will be removed later on
- All of the thumbnails currently use an intermediary placeholder.png
image- each vacation document in the database will have their own image
served

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,25 @@
     </div>
   </div>
 
-
   <div class="container">
+
+
+    <div class='index-packages-section row'>
+      <% vacations.forEach(function(result) { %>
+        <div class='col-xs-12 col-sm-4'>
+          <div class='thumbnail'>
+            <img src=' <%= result.image %> '>
+          </div>
+          <div class='caption'>
+            <p> <%= result.description.slice(0,75) + '...' %> </p>
+            <p>
+              <a href='/vacations/<%= result._id %>'>See More</a>
+            </p>
+          </div>
+        </div>
+      <% }); %>
+
+    </div>
 
 
 
@@ -34,7 +51,6 @@
       </div>
 
 
-
       <div class="row">
         <div class="col-lg-12">
           <h1 class="about-row-title">Natural Resort</h2>
@@ -50,7 +66,6 @@
           </div>
         </div>
       </div>
-
 
 
       <div class="row">
