Added in functionality for the index page
- I have now renamed the original index page to landing.ejs, and will
now on refer to it as either the landing page or the home page
- The index.ejs page now refers to the index page (according to RESTful
routing convention) that lists all of the vacation packages available
- I have coded in a very simple index.ejs page that renders all entries
in the database
- Thus it isn't complete, but another major part of the website is now
functional, so updating and commiting these changes is a good idea
- Note that everything is still using placeholder images and lorem ipsum
text- this will be changed in the future

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -48,20 +48,35 @@ footer .logo,
   height: 65vh;
 }
 
-.about-body{
-  padding-top: 70px;
+
+.homepage-packages-section{
+  margin: 40px 0 0 0;
+  padding: 5px 5px;
 }
 
-.about-row-title{
+.caption a{
+  float: right;
+}
+
+
+.row-title{
+  font-size: 2.5em;
   text-align: center;
+}
+
+.about-body{
+  padding-top: 70px;
 }
 
 .about-blurb{
   font-size: 15px;
 }
 
-hr{
-  height: 5px;
+
+
+/* Index page */
+.index-body{
+  margin-top: 80px;
 }
 
 
