--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,7 +32,7 @@
         <div class='collapse navbar-collapse' id='idToTarget'>
           <ul class='nav navbar-nav navbar-right'>
             <li><a href='/'>Home</a></li>
-            <li><a href='/about'>Sightseeing Tours</a></li>
+            <li><a href='/vacations'>Sightseeing Tours</a></li>
             <li><a href='#'>[Placeholder]</a></li>
           </ul>
         </div>
