More structuring of the index page (new jumbotron) and set up of structure for the show page
- Added in a smaller jumbotron for the index page
- Switched background images between the index and landing page's
jumbotrons to better fit some aesthetic design changes
- A number of smaller changes to elements all over the index page, such
as margins, padding, etc
- Added in a number of horizontal rules (HR's) to separate the index
page listings

- Added in a side navbar for the show pages- just setting it up for
future work

- Renamed the routes from /vacations to /tours to better reflect the
content of the website

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,33 @@
 <% include ./partials/header.ejs %>
 
-<div class='index-body container'>
+<div class='index-body'>
 
-  <% vacations.forEach(function(vacation) { %>
-    <div class='index-block row'>
-      <img src='<%= vacation.image %>' class='col-sm-3'>
-      <div class='col-sm-9'>
-        <p class='index-description'><%= vacation.description.slice(0,400) + '...' %></p>
-        <p>
-          <a href='/vacations/<%= vacation._id  %>'>See More</a>
-        </p>
+  <div class='index-jumbo'>
+  </div>
+
+
+
+  <div class='container'>
+
+    <p class='row-title'>Your Mallorca Adventure Awaits</p>
+
+    <% vacations.forEach(function(vacation) { %>
+      <div class='index-block row'>
+        <img src='<%= vacation.image %>' class='col-sm-3'>
+        <div class='col-sm-9 index-block-content'>
+          <p class='index-block-title'><%= vacation.name %></p>
+          <p class='index-description'><%= vacation.description.slice(0,400) + '...' %></p>
+          <p>
+            <a href='/tours/<%= vacation._id  %>'>See More</a>
+          </p>
+        </div>
       </div>
-    </div>
-  <% }); %>
+
+      <hr class='index-hr'>
+    <% }); %>
+
+  </div>
+
 
 </div>
 
