--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -25,7 +25,7 @@ footer .logo,
 
 
 
-/*     Main page (index.ejs)    */
+/*     Main page (landing.ejs)    */
 .jumbotron-content{
   margin-top: 20%;
   text-align: center;
@@ -41,9 +41,9 @@ footer .logo,
   font-size: 1.75em;
 }
 
-#main-page-jumbo{
-  margin-top: 25px;
-  background-image: url(/img/mallorca-jumbo-cropped.jpg);
+.jumbo{
+  margin-top: 50px;
+  background-image: url(/img/soller-jumbo-cropped.jpg);
   background-size: cover;
   height: 65vh;
 }
@@ -74,12 +74,35 @@ footer .logo,
 
 
 
-/* Index page */
-.index-body{
-  margin-top: 80px;
+/* Index page (index.ejs) */
+.index-jumbo{
+  background-image: url(/img/mallorca-jumbo-cropped.jpg);
+  background-size: cover;
+  height: 45vh;
+  margin: 0 0 20px 0;
+
 }
 
+.index-body{
+  margin-top: 50px;
+}
 
+.index-block{
+  margin: 20px 0 20px 0;
+}
+
+.index-block-content{
+  padding: 10px 5px;
+}
+
+.index-block-title{
+  font-weight: 600;
+  font-size: 1.75em;
+}
+
+.index-hr{
+  font-weight: 600;
+}
 
 
 /*    Media Queries   */
