--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,5 +1,21 @@
 <% include ./partials/header.ejs %>
 
+<div class='container'>
+  <div class='row'>
+
+    <div class='show-sidebar col-md-3'>
+      <div class='list-group'>
+        <div class='list-group-item'>Test 1</div>
+        <div class='list-group-item'>Test 2</div>
+        <div class='list-group-item'>Test 3</div>
+      </div>
+    </div>
+
+    <div class='show-body col-md-9'>
+
+    </div>
+  </div>
+</div>
 
 
 <% include ./partials/footer.ejs %>
