--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -24,7 +24,7 @@
           <div class='caption'>
             <p> <%= result.description.slice(0,75) + '...' %> </p>
             <p>
-              <a href='/vacations/<%= result._id %>'>See More</a>
+              <a href='/tours/<%= result._id %>'>See More</a>
             </p>
           </div>
         </div>
@@ -32,6 +32,13 @@
     </div>
 
 
+    <div class='text-center'>
+      <button class='btn btn-outline-primary homepage-button'>
+        <a href='/tours'>See All Deals!</a>
+      </button>
+    </div>
+
+    <hr>
 
     <div class='about-body'>
       <!-- All of the following thumbnail images are 700x400 pixels -->
@@ -85,14 +92,6 @@
         </div>
       </div>
 
-
-      <div class="row">
-        <div class="col-lg-12">
-          <p class="about-blurb">
-            Nam facilisis placerat fringilla. Cras eget mollis mauris. Sed sit amet elit tellus. Curabitur diam odio, aliquet vitae congue eu, porta ut erat. Donec lobortis justo vel hendrerit mattis. Integer tempor fringilla quam in pellentesque. Donec auctor diam sed risus porttitor, ac posuere odio sodales. Donec at turpis eu ligula iaculis eleifend. Sed id sem pellentesque, imperdiet tortor sit amet, blandit metus. Sed pellentesque, libero quis tempus placerat, quam metus condimentum odio, eu lobortis est arcu quis augue. Sed euismod finibus purus sit amet finibus. Praesent aliquet neque ex, eu tempor dolor pharetra a. Fusce pretium vel lorem ac pulvinar. Aliquam erat volutpat.
-          </p>
-        </div>
-      </div>
     </div> <!-- End of 'about-body' -->
 
   </div> <!-- End of 'container' -->
