--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header.ejs %>
 
-<div class='container'>
+<div class='container show-page'>
   <div class='row'>
 
     <div class='show-sidebar col-md-3'>
@@ -12,7 +12,7 @@
     </div>
 
     <div class='show-body col-md-9'>
-
+      Test
     </div>
   </div>
 </div>
