--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,44 @@
     <!-- Page footer -->
     <footer>
       <div class='container'>
-          <p class='footer-item logo'>TourMallorca</p>
-          <p class='footer-item'>Mock Webpage created with Bootstrap 3 by Christopher Liu</p>
+        <div class='row'>
+          <div class='col-xs-12 col-sm-4'>
+            <p>Customer Support</p>
+            <div class='col-xs-6'>
+              <p><a>Contact Us</a></p>
+              <p><a>FAQs</a></p>
+              <p><a></a></p>
+            </div>
+            <div class='col-xs-6'>
+              <p><a>Privacy Policy</a></p>
+              <p><a>Sitemap</a></p>
+              <p><a></a></p>
+            </div>
+          </div>
+
+          <div class='col-xs-12 col-sm-4'>
+            <p>About Us</p>
+            <div class='col-xs-6'>
+              <p><a>About Us</a></p>
+              <p><a>Press</a></p>
+              <p><a></a></p>
+            </div>
+            <div class='col-xs-6'>
+              <p><a>Blog</a></p>
+              <p><a>Careers</a></p>
+              <p><a></a></p>
+            </div>
+          </div>
+
+          <div class='col-xs-12 col-sm-4'>
+            <p class='footer-item logo'>TourMallorca</p>
+            <p class='footer-item'>Mock Webpage by Christopher Liu</p>
+            <a href='#'><i class="fa fa-yelp fa-2x" aria-hidden="true"></i></a>
+            <a href='#'><i class="fa fa-tripadvisor fa-2x" aria-hidden="true"></i></a>
+            <a href='#'><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+            <a href='#'><i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i></a>
+          </div>
+        </div>
       </div>
     </footer>
 
