--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,8 @@
     <meta http-equiv='Content-Type' content='text/html;charset=UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
+
+    <script src="https://use.fontawesome.com/1693a3abd2.js"></script>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u' crossorigin='anonymous'>
     <link href='https://fonts.googleapis.com/css?family=Poppins|Pacifico' rel='stylesheet'>
     <link rel='stylesheet' type='text/css' href='/stylesheets/main.css'>
@@ -33,7 +35,14 @@
           <ul class='nav navbar-nav navbar-right'>
             <li><a href='/'>Home</a></li>
             <li><a href='/tours'>Tours</a></li>
-            <li><a href='#'>[Placeholder]</a></li>
+            <li><a href='#'>
+              <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+              Cart
+            </a></li>
+            <li><a href='#'>
+              <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+              Log In
+            </a></li>
           </ul>
         </div>
       </div>
