--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6,6 +6,7 @@ body{
 
 .logo{
   font-family: 'Pacifico', cursive;
+  font-size: 1.75em;
 }
 
 /*  Footer Items  */
@@ -15,9 +16,13 @@ footer{
   margin: 10px 0 0 0;
 }
 
-footer .logo,
-.navbar-header .logo{
-  font-size: 1.75em;
+.footer-title{
+  font-size: 1.25em;
+  font-weight: 600;
+}
+
+.footer-logosAndLinks{
+  text-align: center;
 }
 
 
@@ -78,14 +83,14 @@ footer .logo,
   background-image: url(/img/mallorca-jumbo-cropped.jpg);
   background-size: cover;
   height: 45vh;
+}
 
+.index-sidebar-title{
+  font-size: 1.4em;
+  font-weight: 600;
 }
 
 .index-body{
-  margin-top: 40px;
-}
-
-.index-sidebar{
   margin-top: 40px;
 }
 
@@ -121,5 +126,13 @@ footer .logo,
   .jumbotron-title,
   .jumbotron-description{
     text-align: center;
+  }
+
+  .footer-logosAndLinks{
+    text-align: right;
+  }
+
+  .index-sidebar{
+    margin: 40px 0 0 0;
   }
 }
