--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <div class='container'>
     <div class='row'>
       <div class='index-sidebar well col-xs-12 col-md-3'>
-        <p>Find Your Perfect Trip</p>
+        <p class='index-sidebar-title'>Find Your Perfect Trip</p>
 
         <form>
           <p>Travel Dates</p>
@@ -48,7 +48,7 @@
 
 
 
-          <button type='submit' class='btn btn-primary'>Search</button>
+          <button type='submit' class='btn btn-primary'>Find</button>
         </form>
       </div>
 
