--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,42 +3,44 @@
       <div class='container'>
         <div class='row'>
           <div class='col-xs-12 col-sm-4'>
-            <p>Customer Support</p>
+            <p class='footer-title'>Customer Support</p>
             <div class='col-xs-6'>
-              <p><a>Contact Us</a></p>
-              <p><a>FAQs</a></p>
-              <p><a></a></p>
+              <p><a href='#'>Contact Us</a></p>
+              <p><a href='#'>FAQs</a></p>
+              <p><a href='#'>Terms of Use</a></p>
             </div>
             <div class='col-xs-6'>
-              <p><a>Privacy Policy</a></p>
-              <p><a>Sitemap</a></p>
-              <p><a></a></p>
-            </div>
-          </div>
-
-          <div class='col-xs-12 col-sm-4'>
-            <p>About Us</p>
-            <div class='col-xs-6'>
-              <p><a>About Us</a></p>
-              <p><a>Press</a></p>
-              <p><a></a></p>
-            </div>
-            <div class='col-xs-6'>
-              <p><a>Blog</a></p>
-              <p><a>Careers</a></p>
-              <p><a></a></p>
+              <p><a href='#'>Legal</a></p>
+              <p><a href='#'>Privacy Policy</a></p>
+              <p><a href='#'>Sitemap</a></p>
             </div>
           </div>
 
           <div class='col-xs-12 col-sm-4'>
+            <p class='footer-title'>About Us</p>
+            <div class='col-xs-6'>
+              <p><a href='#'>About Us</a></p>
+              <p><a href='#'>Press</a></p>
+              <p><a href='#'>Brochures</a></p>
+            </div>
+            <div class='col-xs-6'>
+              <p><a href='#'>Blog</a></p>
+              <p><a href='#'>Careers</a></p>
+            </div>
+          </div>
+
+          <div class='col-xs-12 col-sm-4 footer-logosAndLinks'>
             <p class='footer-item logo'>TourMallorca</p>
-            <p class='footer-item'>Mock Webpage by Christopher Liu</p>
             <a href='#'><i class="fa fa-yelp fa-2x" aria-hidden="true"></i></a>
             <a href='#'><i class="fa fa-tripadvisor fa-2x" aria-hidden="true"></i></a>
             <a href='#'><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
             <a href='#'><i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i></a>
           </div>
         </div>
+
+        <hr>
+
+        <p class='footer-item'><i class="fa fa-copyright" aria-hidden="true"></i> 2017 Mock Webpage by Christopher Liu</p>
       </div>
     </footer>
 
